fix: SplitSentenceResponse is not serialized/deserialized correctly